[project]
name = "pyspark"
version = "3.6.0"
description = "Default template for PDM package"
authors = [
    {name = "sunwoo", email = "summerham22@gmail.com"},
]
dependencies = [
	"py4j>=0.10.9.7",
	"pyspark>=3.5.3"  
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
